# kubers-sample

./: Cargo.toml  README.md
config/sample/: sample.yaml
src/: crdgen.rs  lib.rs  main.rs  manager.rs
