[package]
name = "kubers-sample"
version = "0.1.0"
edition = "2018"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.9"
futures = "0.3.17"
tokio = { version = "1.11.0", features = ["macros"] }
kube = { version = "0.60.0", features = ["derive"] }
kube-runtime = "0.60.0"
k8s-openapi = { version = "0.13.0", features = ["v1_22"], default-features=false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.29"
schemars = { version = "0.8.3", features = ["chrono"] }
serde_yaml = "0.8.21"
maplit = "1.0.2"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.20", features = ["json"] }
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.9.0", features = ["tokio"], optional = true }
prometheus = "0.12.0"
tonic = { version = "0.5.2", optional = true }
rand = "0.8.4"
